update & workflow test

--- a/data/koncovky/kaqvk.yml
+++ b/data/koncovky/kaqvk.yml
@@ -1,25 +1,25 @@
 # Název Openingu/Koncovky
-name: Template
+name: King and Queen vs King
 
 # Popis
 description: Best way to checkmate your opponent when you have a queen.
 
 # Úvodní pozice, nutná pouze u koncovek. Formát FEN
-start: "4k3/8/8/8/8/8/8/4K1R1 w - - 0 1"
+start: "4k3/8/8/8/8/8/8/4KQ2 w - - 0 1"
 
 # Kdo je na řadě. 1 = bílý, 0 = černý. 
 onmove: 1
 
-# Tahy, ve formátu PGN. Jeden dvoutah na jeden řádek. 
+# Tahy, ve formátu SAN. Jeden dvoutah na jeden řádek. 
 moves: 
-  - Qe6 Kc7
-  - Kd2 Kb8
-  - Kc3 Kc7
-  - Kc4 Kd8
-  - Kc5 Kc7
-  - Qe7+ Kb8
-  - Kb6 Ka8
-  - Qb7#
+  - Kd2 Kd7
+  - Qf6 Kc7
+  - Kc3 Kb7
+  - Kb4 Ka7
+  - Kb5 Kb7
+  - Qd8 Ka7
+  - Kc6 Ka6
+  - Qa8#
 
 
 
