--- a/.github/workflows/filelist.yml
+++ b/.github/workflows/filelist.yml
@@ -9,14 +9,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Seznam otevření 
-        run: ls /data/otevreni > otevreni.txt
+        run: ls ./data/otevreni > otevreni.txt
       - name: Nahrání otevreni
         uses: actions/upload-artifact@v2
         with:
           name: otevreni
           path: otevreni.txt
       - name: Seznam koncovek 
-        run: ls /data/koncovky > koncovky.txt
+        run: ls ./data/koncovky > koncovky.txt
       - name: Nahrání koncovek
         uses: actions/upload-artifact@v2
         with:
