--- a/.github/workflows/filelist.yml
+++ b/.github/workflows/filelist.yml
@@ -10,8 +10,18 @@ jobs:
         uses: actions/checkout@v3
       - name: Seznam otevření 
         run: ls ./data/otevreni > otevreni.txt
+      - name: Nahrání otevření
+        uses: actions/upload-asset@v2
+        with:
+          path: otevreni.txt
+          name: otevreni.txt
+          label: otevreni
       - name: Seznam koncovek 
         run: ls ./data/koncovky > koncovky.txt
-      - name: Zkopírovat soubory
-        run: |
-          cp -r ./ $GITHUB_WORKSPACE/list/
+      - name: Nahrání koncovek
+        uses: actions/upload-asset@v2
+        with:
+          path: koncovky.txt
+          name: koncovky.txt
+          label: koncovky
+
