--- a/.github/workflows/filelist.yml
+++ b/.github/workflows/filelist.yml
@@ -1,3 +1,4 @@
+name: List Files
 
 on:
   workflow_dispatch:
@@ -6,28 +7,37 @@ jobs:
   list-files:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Seznam otevření 
-        run: ls ./data/otevreni > otevreni.txt
-      - name: Seznam koncovek 
-        run: ls ./data/koncovky > koncovky.txt   
-      - name: Setup node
-        uses: actions/setup-node@v3
-      - name: Upload otevreni
-        uses: LasyIsLazy/github-upload-action@v0.2.0
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: List otevreni
+        run: |
+          cd data/otevreni
+          ls > otevreni.txt
+      
+      - name: Send otevreni
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          access-token: ${{ secrets.ACCESS_TOKEN }}
-          file-path: otevreni.txt
-          owner: tomasKubicek
-          repo: thechesstree
-          remote-dir: data/list/
-      - name: Upload koncovky
-        uses: LasyIsLazy/github-upload-action@v0.2.0
-        with:
-          access-token: ${{ secrets.ACCESS_TOKEN }}
-          file-path: koncovky.txt
-          owner: tomasKubicek
-          repo: thechesstree
-          remote-dir: data/list/
+          commit_message: "Send otevreni"
+          commit_options: "--no-verify"
+          file_pattern: "data/otevreni/otevreni.txt"
+          branch: ${{ github.head_ref }}
+          pull_branch: ${{ github.head_ref }}
+          author_name: ${{ github.actor }}
+          author_email: ${{ github.actor }}@users.noreply.github.com
 
+      - name: List koncovky
+        run: |
+          cd data/koncovky
+          ls > koncovky.txt
+      
+      - name: Send koncovky
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "Send koncovky"
+          commit_options: "--no-verify"
+          file_pattern: "data/koncovky/koncovky.txt"
+          branch: ${{ github.head_ref }}
+          pull_branch: ${{ github.head_ref }}
+          author_name: ${{ github.actor }}
+          author_email: ${{ github.actor }}@users.noreply.github.com
