--- a/.github/workflows/filelist.yml
+++ b/.github/workflows/filelist.yml
@@ -5,7 +5,9 @@ on:
 
 jobs:
   list-files:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest   
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
